Implement code for generating reports

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,14 @@
             <version>${javafx.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.4.1</version>   <!-- newer release available -->
+        </dependency>
+
+
+
         <!-- MySQL connector (stable version) -->
         <dependency>
             <groupId>mysql</groupId>
